feat: Implementations of arp scanning and fingerprinting tool
arp-scan is a command-line tool that uses the ARP protocol to discover and fingerprint IP hosts on the local network. It is available for Linux and BSD under the GPL licence

Log: Implementations of arp scanning and fingerprinting tool

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/299

--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,20 @@
-Source: template-repository
-Section: unknown
+Source: arp-scan
+Section: admin
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
-Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Maintainer: Debian Security Tools <team+pkg-security@tracker.debian.org>
+Uploaders: Marcos Fouces <marcos@debian.org>
+Build-Depends: debhelper-compat (= 13), libpcap0.8-dev, libcap-dev
+Standards-Version: 4.6.2
+Rules-Requires-Root: no
+Homepage: https://github.com/royhills/arp-scan
+Vcs-Git: https://salsa.debian.org/pkg-security-team/arp-scan.git
+Vcs-Browser: https://salsa.debian.org/pkg-security-team/arp-scan
 
-Package: template-repository
+Package: arp-scan
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Recommends: libwww-perl, libtext-csv-perl, ieee-data
+Description: arp scanning and fingerprinting tool
+ arp-scan is a command-line tool that uses the ARP protocol to discover and
+ fingerprint IP hosts on the local network. It is available for Linux and BSD
+ under the GPL licence
